Manipulated words in the book and found the frequency of words

--- a/Task2.ipynb
+++ b/Task2.ipynb
@@ -31,9 +31,9 @@
     "dic={}\n",
     "for word in list1:\n",
     "    if word not in dic: \n",
-    "        count=list1.count(word)      #Counting the number \n",
-    "        dic[word]=count\n",
-    "d=sorted(dic,key=dic.get,reverse=True)\n",
+    "        count=list1.count(word)      #Counting the number of words in the list after stripping\n",
+    "        dic[word]=count            #storing the word and its count in a dictionary\n",
+    "d=sorted(dic,key=dic.get,reverse=True)      #Using get function to get values of dic and sorting in decreading order\n",
     "print(d[0:21])\n",
     "print(len(d))\n",
     "\n",
